Rewrote tests that used derby to use hsqldb.